--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,4 +5,23 @@
          version="3.0"
          metadata-complete="true">
     <!-- 修改maven生成的servlet版本，使用3.0 -->
+
+    <!-- 配置DispatcherServlet -->
+    <servlet>
+        <servlet-name>seckill-dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <!-- 配置SpringMVC需要加载的配置文件
+            spring-dao，spring-service，spring-web
+            Mybatis -> Spring -> SpringMVC
+        -->
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:spring/spring-*.xml</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>seckill-dispatcher</servlet-name>
+        <!-- 配置过滤所有请求，符合SpringMVC对Restful的支持 -->
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 </web-app>
